--- a/connectWithAssistant.html
+++ b/connectWithAssistant.html
@@ -3,139 +3,128 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Chat Assistant</title>
+    <title>Arlington Heist Suspect Interrogation</title>
+    
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+
     <style>
-        /* General Styles */
-        body { 
-            font-family: 'Poppins', sans-serif;
-            background: #f4f7fc;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+        body {
+            font-family: 'Special Elite', cursive;
+            background: #f4f4f4;
+            color: #333333;
             margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
         }
 
-        /* Chat Container */
-        #chat-container { 
+        header {
+            background: #c7b8ab;
             width: 100%;
-            max-width: 500px;
-            background: #ffffff;
-            border-radius: 12px;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.15);
-            overflow: hidden;
-            display: flex;
-            flex-direction: column;
-            height: 90vh;
-        }
-
-        /* Header */
-        #chat-header {
-            background: #007bff;
-            color: white;
+            padding: 15px;
             text-align: center;
-            padding: 15px;
-            font-size: 18px;
-            font-weight: 600;
+            font-size: 22px;
+            font-weight: bold;
+            color: #333333;
         }
 
-        /* Chat Box */
-        #chat-box { 
-            flex-grow: 1;
-            overflow-y: auto;
-            padding: 15px;
-            border-bottom: 1px solid #ddd;
+        #chat-container {
+            width: 90%;
+            max-width: 600px;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
             display: flex;
             flex-direction: column;
-            gap: 10px;
-            scroll-behavior: smooth;
+            height: 70vh;
+        }
+
+        #chat-box {
+            flex: 1;
+            overflow-y: auto;
+            border: 1px solid #ddd;
+            padding: 10px;
             background: #f9f9f9;
+            border-radius: 5px;
+            margin-bottom: 10px;
         }
 
         .message {
-            padding: 12px 15px;
-            border-radius: 20px;
+            padding: 10px;
+            margin: 5px;
+            border-radius: 5px;
             max-width: 80%;
-            word-wrap: break-word;
-            font-size: 14px;
-            line-height: 1.5;
-            animation: fadeIn 0.3s ease-in-out;
         }
 
-        .user-message { 
-            background: #007bff;
+        .user-message {
+            background: #c7b8ab;
             color: white;
+            text-align: right;
             align-self: flex-end;
         }
 
-        .ai-message { 
-            background: #e9ecef;
+        .ai-message {
+            background: #ddd;
+            text-align: left;
             align-self: flex-start;
-            color: #333;
         }
 
-        /* Input Section */
-        .input-container {
+        #input-container {
             display: flex;
-            padding: 12px;
-            background: white;
-            border-top: 1px solid #ddd;
+            gap: 10px;
         }
 
-        #user-input { 
-            flex-grow: 1;
-            padding: 12px;
-            border: 1px solid #ddd;
-            border-radius: 25px;
-            font-size: 14px;
-            outline: none;
-            transition: border-color 0.3s;
+        #user-input {
+            flex: 1;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 16px;
         }
 
-        #user-input:focus {
-            border-color: #007bff;
-        }
-
-        #send-btn { 
-            padding: 12px 18px;
-            background: #007bff;
+        #send-btn {
+            padding: 10px 15px;
+            background: #c7b8ab;
             color: white;
             border: none;
-            border-radius: 25px;
             cursor: pointer;
-            margin-left: 10px;
-            transition: background 0.3s;
-            font-size: 14px;
+            border-radius: 5px;
+            font-size: 16px;
+            transition: 0.3s;
         }
 
-        #send-btn:hover { 
-            background: #0056b3;
+        #send-btn:hover {
+            background: #b0a192;
         }
 
-        /* Footer */
-        #chat-footer {
+        footer {
+            margin-top: 10px;
             text-align: center;
-            padding: 10px;
-            font-size: 12px;
-            background: #f1f1f1;
+            font-size: 14px;
             color: #555;
-        }
-
-        /* Smooth Message Animation */
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(5px); }
-            to { opacity: 1; transform: translateY(0); }
+            width: 100%;
+            padding: 10px;
         }
 
         /* Responsive Design */
-        @media screen and (max-width: 500px) {
+        @media (max-width: 768px) {
             #chat-container {
+                height: 80vh;
                 width: 95%;
-                height: 95vh;
             }
-            #chat-header {
-                font-size: 16px;
-                padding: 12px;
+
+            header {
+                font-size: 18px;
+                padding: 10px;
+            }
+
+            #send-btn {
+                font-size: 14px;
             }
         }
     </style>
@@ -172,15 +161,17 @@
         }
     </script>
 </head>
- <body>
+  <body>
+    <header>Arlington Heist Suspect Interrogation</header>
+
     <div id="chat-container">
-        <div id="chat-header">💬 AI Chat Assistant</div>
         <div id="chat-box"></div>
-        <div class="input-container">
-            <input id="user-input" type="text" placeholder="Type a message..." autocomplete="off">
+        <div id="input-container">
+            <input id="user-input" type="text" placeholder="Type a message...">
             <button id="send-btn" onclick="sendMessage()">Send</button>
         </div>
-        <div id="chat-footer">© 2025 AI Chat Assistant. All rights reserved.</div>
     </div>
+
+    <footer>Interactive Games</footer>
 </body>
 </html>
